Fix some CSS bugs on Firefox
Add support for BasicInfo button

--- a/src/UI/Components/PartyFriends/PartyFriends.css
+++ b/src/UI/Components/PartyFriends/PartyFriends.css
@@ -10,6 +10,7 @@
 #PartyFriends .titlebar .clear { clear:both; }
 
 #PartyFriends .content { height:120px; width:240px; background-color:white; }
+#PartyFriends .clear { clear:both; }
 
 /* Friend list */
 #PartyFriends .node { padding:1px 1px 1px 18px; background-repeat:no-repeat; background-color:transparent; }
@@ -31,7 +32,7 @@
 #PartyFriends .content .node .selection { background-color:#739cef; }
 
 #PartyFriends .navigation { width:100%; height:20px; background-repeat:repeat-x; background-color:transparent; }
-#PartyFriends .navigation button { border:none; background:none; width:26px; height:20px; position:relative; }
+#PartyFriends .navigation button { float:left; border:none; background:none; width:26px; height:20px; position:relative; }
 #PartyFriends .navigation button .overlay { position:absolute; display:none; top:-20px; white-space:nowrap; z-index:900; height:13px; padding:5px; background:rgba(0,0,0,0.7); color:white; text-shadow:1px 1px black; }
 #PartyFriends .navigation button:hover .overlay { display:block; }
 
